อัปเดตแล้วจริงๆ

--- a/feature_selection_(ANOVA).ipynb
+++ b/feature_selection_(ANOVA).ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNszQnanjMQ2hzYnSXVSJx3",
+      "authorship_tag": "ABX9TyOZhWaag9WCoHTH9uGu0J1A",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -57,14 +57,16 @@
         "file_path = Path(dataset_path) / \"fetal_health.csv\"\n",
         "df = pd.read_csv(file_path)\n",
         "\n",
+        "\n",
+        "print(\"ขนาดก่อนลบ:\", df.shape)\n",
+        "data = df.drop_duplicates(keep=\"first\")\n",
+        "print(\"ขนาดหลังลบ:\", df.shape)\n",
+        "\n",
         "TARGET = \"fetal_health\"\n",
         "X = df.drop(columns=[TARGET]).select_dtypes(include=[np.number])\n",
         "y = df[TARGET].astype(int)\n",
         "\n",
         "\n",
-        "print(\"ขนาดก่อนลบ:\", df.shape)\n",
-        "data = df.drop_duplicates(keep=\"first\")\n",
-        "print(\"ขนาดหลังลบ:\", df.shape)\n",
         "\n",
         "# แบ่ง train/test เพื่อประเมินสุดท้าย (นอกเหนือจาก CV)\n",
         "X_train, X_test, y_train, y_test = train_test_split(\n",
@@ -76,7 +78,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "b04KMFrRTg07",
-        "outputId": "beba3236-a955-4592-8e3c-2c892f3fed19"
+        "outputId": "02449622-75c1-4307-a3c3-d2b3c0aa29e4"
       },
       "execution_count": null,
       "outputs": [
@@ -95,7 +97,7 @@
       "cell_type": "code",
       "source": [
         "pipe = Pipeline(steps=[\n",
-        "    (\"var\", VarianceThreshold(threshold=0.0)),           # optional — ตัดฟีเจอร์คงที่\n",
+        "\n",
         "    (\"sel\", SelectKBest(score_func=f_classif)),    # optional — ถ้ามีฟีเจอร์เยอะมาก\n",
         "    (\"clf\", RandomForestClassifier(\n",
         "        random_state=42,\n",
@@ -168,7 +170,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6Kld-AFkUKb5",
-        "outputId": "56221544-2704-459e-a566-b55f3f4525ad"
+        "outputId": "05b5bdfe-badb-4482-f699-c8e5de7bcac9"
       },
       "execution_count": null,
       "outputs": [
@@ -177,19 +179,19 @@
           "name": "stdout",
           "text": [
             "Fitting 5 folds for each of 21 candidates, totalling 105 fits\n",
-            "Best params: {'sel__k': 16}\n",
-            "Best CV f1_macro: 0.8764688408017968\n",
-            "Test F1_macro: 0.8544018115745792\n",
-            "Test Balanced Acc.: 0.8991223975806374\n",
+            "Best params: {'sel__k': 10}\n",
+            "Best CV f1_macro: 0.8901198852820891\n",
+            "Test F1_macro: 0.8566930441454191\n",
+            "Test Balanced Acc.: 0.8861893092952925\n",
             "              precision    recall  f1-score   support\n",
             "\n",
-            "           1       0.98      0.92      0.95       332\n",
-            "           2       0.68      0.86      0.76        59\n",
-            "           3       0.80      0.91      0.85        35\n",
+            "           1       0.97      0.93      0.95       332\n",
+            "           2       0.71      0.81      0.76        59\n",
+            "           3       0.82      0.91      0.86        35\n",
             "\n",
             "    accuracy                           0.91       426\n",
-            "   macro avg       0.82      0.90      0.85       426\n",
-            "weighted avg       0.92      0.91      0.91       426\n",
+            "   macro avg       0.83      0.89      0.86       426\n",
+            "weighted avg       0.92      0.91      0.92       426\n",
             "\n"
           ]
         }
@@ -210,7 +212,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TVabM_mUVUSP",
-        "outputId": "b3ec950c-a82c-4b6a-85c3-61b67d7205a0"
+        "outputId": "9171a15c-b877-4a18-8c02-c57cbcc7ed81"
       },
       "execution_count": null,
       "outputs": [
@@ -218,7 +220,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Selected 16 features (k): ['baseline value', 'accelerations', 'uterine_contractions', 'light_decelerations', 'prolongued_decelerations', 'abnormal_short_term_variability', 'mean_value_of_short_term_variability', 'percentage_of_time_with_abnormal_long_term_variability', 'mean_value_of_long_term_variability', 'histogram_width', 'histogram_min', 'histogram_mode', 'histogram_mean', 'histogram_median', 'histogram_variance', 'histogram_tendency']\n"
+            "Selected 10 features (k): ['baseline value', 'accelerations', 'prolongued_decelerations', 'abnormal_short_term_variability', 'mean_value_of_short_term_variability', 'percentage_of_time_with_abnormal_long_term_variability', 'histogram_mode', 'histogram_mean', 'histogram_median', 'histogram_variance']\n"
           ]
         }
       ]
@@ -243,7 +245,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Yp70eaXpV8vv",
-        "outputId": "cbbd05e2-6aea-43ef-9ea0-a065daad63f2"
+        "outputId": "92ea388e-64e2-4840-9f92-359aeef527c4"
       },
       "execution_count": null,
       "outputs": [
@@ -251,9 +253,9 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "OOB micro-accuracy (clf.oob_score_): 0.9241176470588235\n",
-            "OOB F1_macro: 0.8823946186276251\n",
-            "OOB Balanced Acc.: 0.9192683297357623\n"
+            "OOB micro-accuracy (clf.oob_score_): 0.9317647058823529\n",
+            "OOB F1_macro: 0.8909376601577121\n",
+            "OOB Balanced Acc.: 0.918110646911327\n"
           ]
         }
       ]
