--- a/ML_Assignment__standard_team_lastest.ipynb
+++ b/ML_Assignment__standard_team_lastest.ipynb
@@ -547,7 +547,7 @@
       "outputs": [],
       "source": [
         "pipelines = {\n",
-        "        \"RF_SMOTETomek\": ImbPipeline([\n",
+        "    \"RF_SMOTETomek\": ImbPipeline([\n",
         "        (\"scale\", StandardScaler()),\n",
         "        (\"sel\", SelectKBest(score_func=f_classif)), # supervised selection\n",
         "        (\"smtomek\", SMOTETomek(random_state=SEED)),\n",
@@ -708,33 +708,7 @@
       "source": [
         "from sklearn.model_selection import RepeatedStratifiedKFold\n",
         "\n",
-        "cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=10, random_state=SEED)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "0H78ND-o3iN0"
-      },
-      "source": [
-        "## Skip tune model that use SMOTE and their families"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "Bsh45o5I3hKS"
-      },
-      "outputs": [],
-      "source": [
-        "# --- build the filtered dict + a small report ---\n",
-        "skipped, pipelines_to_tune = [], {}\n",
-        "for name, pipe in pipelines.items():\n",
-        "    if pipeline_has_smote_or_smoteenn(pipe):\n",
-        "        skipped.append(name)\n",
-        "    else:\n",
-        "        pipelines_to_tune[name] = pipe"
+        "cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=5, random_state=SEED)"
       ]
     },
     {
@@ -750,22 +724,6 @@
       "cell_type": "code",
       "execution_count": null,
       "metadata": {
-        "id": "XqsVTqIj3veO"
-      },
-      "outputs": [],
-      "source": [
-        "print(\"[TUNE SELECTED] Will tune these pipelines: \", end=\"\\t\")\n",
-        "pprint(pipelines_to_tune.keys())\n",
-        "\n",
-        "if len(skipped) > 0:\n",
-        "    print(\"[TUNE SKIPED] Skipping pipelines using SMOTE-Families: \", end=\"\\t\")\n",
-        "    pprint(skipped)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
         "id": "I5UKFWvUL9mV"
       },
       "outputs": [],
@@ -775,7 +733,7 @@
         "\n",
         "model_tuned: dict[str, dict] = defaultdict(dict)\n",
         "\n",
-        "for model_name, base_est in pipelines_to_tune.items():\n",
+        "for model_name, base_est in pipelines.items():\n",
         "    grid = grid_for(model_name, search_spaces)\n",
         "    if not grid:\n",
         "        print(f\"[SKIP] {model_name}: no matching search space.\")\n",
