--- a/ML_Assignment__standard_team_lastest.ipynb
+++ b/ML_Assignment__standard_team_lastest.ipynb
@@ -423,8 +423,6 @@
       "outputs": [],
       "source": [
         "# ======== CONFIG ========\n",
-        "smote_like = (SMOTE, BorderlineSMOTE, SVMSMOTE, SMOTEN, SMOTENC, KMeansSMOTE, SMOTEENN, SMOTETomek, TomekLinks)\n",
-        "\n",
         "PRIMARY_SCORER = \"f1_macro\""
       ]
     },
@@ -470,29 +468,6 @@
         "            return grid\n",
         "    return None\n",
         "\n",
-        "def find_smote_param_prefixes(estimator):\n",
-        "    \"\"\"Return param prefixes pointing to SMOTE-like instances (supports nesting, e.g. 'sampler__smote').\"\"\"\n",
-        "    prefixes = []\n",
-        "    for k, v in estimator.get_params(deep=True).items():\n",
-        "        if isinstance(v, smote_like):\n",
-        "            prefixes.append(k)\n",
-        "    return prefixes\n",
-        "\n",
-        "def safe_k_neighbors(y, n_splits, default_k=5):\n",
-        "    \"\"\"Safe SMOTE k per worst-case train fold.\"\"\"\n",
-        "    counts = Counter(y)\n",
-        "    min_train = min(c - ceil(c / n_splits) for c in counts.values())\n",
-        "    if min_train < 2:\n",
-        "        return None\n",
-        "    return max(1, min(default_k, min_train - 1))\n",
-        "\n",
-        "def pipeline_has_smote_or_smoteenn(estimator) -> bool:\n",
-        "    \"\"\"Return True if any parameter in the estimator tree is an instance of a SMOTE-family sampler or SMOTEENN.\"\"\"\n",
-        "    for _, v in estimator.get_params(deep=True).items():\n",
-        "        if isinstance(v, smote_like):\n",
-        "            return True\n",
-        "    return False\n",
-        "\n",
         "def evaluate_on_test(est, X_test = X_test, y_test = y_test):\n",
         "    \"\"\"Return dict of test metrics and show confusion matrices.\"\"\"\n",
         "\n",
@@ -518,6 +493,14 @@
         "            metrics[\"roc_auc_ovr\"] = roc_auc_score(y_test, y_prob, multi_class=\"ovr\")\n",
         "        except Exception:\n",
         "            pass\n",
+        "\n",
+        "    # Add OOB score if available (for RandomForestClassifier when oob_score=True)\n",
+        "    if hasattr(est, 'steps') and isinstance(est.steps[-1][1], RandomForestClassifier) and hasattr(est.steps[-1][1], 'oob_score_'):\n",
+        "        metrics[\"oob_score\"] = est.steps[-1][1].oob_score_\n",
+        "    elif isinstance(est, RandomForestClassifier) and hasattr(est, 'oob_score_'):\n",
+        "         metrics[\"oob_score\"] = est.oob_score_\n",
+        "\n",
+        "\n",
         "    print(\"#\" * 20)\n",
         "\n",
         "    print(\"\\n- Imbalance Classification report (test):\")\n",
@@ -553,25 +536,28 @@
         "        (\"smtomek\", SMOTETomek(random_state=SEED)),\n",
         "        (\"clf\", RandomForestClassifier(\n",
         "            bootstrap=True,\n",
+        "            oob_score=True,\n",
         "            random_state=SEED))\n",
         "    ]),\n",
         "    \"RF_balancedRF\": ImbPipeline([\n",
         "        (\"sel\", SelectKBest(score_func=f_classif)), # supervised selection\n",
         "        (\"clf\", BalancedRandomForestClassifier(\n",
         "            bootstrap=True,\n",
+        "            oob_score=True,\n",
         "            random_state=SEED\n",
         "        ))\n",
         "    ]),\n",
         "    \"RF_pure\" : ImbPipeline([\n",
         "      (\"clf\", RandomForestClassifier(\n",
         "          bootstrap=True,\n",
-        "          oob_score=False,\n",
+        "          oob_score=True,\n",
         "          random_state=SEED))\n",
         "    ]),\n",
         "    \"RF_class_weighted\" : ImbPipeline([\n",
+        "      (\"sel\", SelectKBest(score_func=f_classif)), # supervised selection\n",
         "      (\"clf\", RandomForestClassifier(\n",
         "          bootstrap=True,\n",
-        "          oob_score=False,\n",
+        "          oob_score=True,\n",
         "          class_weight=\"balanced_subsample\",\n",
         "          random_state=SEED))\n",
         "    ]),\n",
@@ -579,6 +565,7 @@
         "        (\"sel\", SelectKBest(score_func=f_classif)), # supervised selection\n",
         "        (\"clf\", RandomForestClassifier(\n",
         "            bootstrap=True,\n",
+        "            oob_score=True,\n",
         "            class_weight=\"balanced_subsample\",\n",
         "            random_state=SEED\n",
         "        ))\n",
@@ -589,6 +576,7 @@
         "        (\"borderline_smote\", BorderlineSMOTE(random_state=SEED)),\n",
         "        (\"clf\", RandomForestClassifier(\n",
         "            bootstrap=True,\n",
+        "            oob_score=True,\n",
         "            random_state=SEED))\n",
         "    ]),\n",
         "\n",
@@ -598,6 +586,7 @@
         "        (\"smote\", SMOTE(random_state=SEED)),\n",
         "        (\"clf\", RandomForestClassifier(\n",
         "            bootstrap=True,\n",
+        "            oob_score=True,\n",
         "            random_state=SEED))\n",
         "    ]),\n",
         "\n",
@@ -656,8 +645,6 @@
         "\n",
         "    # === Samplers ===\n",
         "    \"RF_SMOTE\": {\n",
-        "        \"smote__k_neighbors\": [3, 5, 7],                                   # SMOTE uses k-NN\n",
-        "        \"smote__sampling_strategy\": [\"not majority\", \"all\"],               # strings for multiclass\n",
         "        \"clf__n_estimators\": [300, 600, 1000],\n",
         "        \"clf__max_depth\": [None, 10, 20],\n",
         "        \"clf__min_samples_leaf\": [1, 2, 4],\n",
@@ -665,9 +652,7 @@
         "        \"clf__n_jobs\": [-1],\n",
         "    },\n",
         "    \"RF_BorderlineSMOTE\": {\n",
-        "        \"borderline_smote__k_neighbors\": [3, 5],\n",
-        "        \"borderline_smote__m_neighbors\": [5, 10],\n",
-        "        \"borderline_smote__kind\": [\"borderline-1\", \"borderline-2\"],\n",
+        "\n",
         "        \"clf__n_estimators\": [300, 600, 1000],\n",
         "        \"clf__max_depth\": [None, 10, 20],\n",
         "        \"clf__min_samples_leaf\": [1, 2, 4],\n",
@@ -675,8 +660,6 @@
         "        \"clf__n_jobs\": [-1],\n",
         "    },\n",
         "    \"RF_SMOTETomek\": {\n",
-        "        \"smtomek__smote__k_neighbors\": [3, 5],\n",
-        "        \"smtomek__sampling_strategy\": [\"not majority\", \"all\"],\n",
         "        \"clf__n_estimators\": [300, 600, 1000],\n",
         "        \"clf__max_depth\": [None, 10, 20],\n",
         "        \"clf__min_samples_leaf\": [1, 2, 4],\n",
@@ -758,6 +741,7 @@
         "\n",
         "    # Perform the hyperparameter search by fitting the search object\n",
         "    search.fit(X_train, y_train)\n",
+        "\n",
         "\n",
         "    # Store the tuning results and the best estimator directly\n",
         "    model_tuned[model_name][\"tune_results\"] = {\n",
@@ -844,40 +828,6 @@
         "        print(f\"\\nSummary of Scores for Tuned Model: {model_name} on Test Set:\")\n",
         "        tuned_scores_df = pd.DataFrame([test_metrics])\n",
         "        display(tuned_scores_df)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "xSnbt_R1NMY6"
-      },
-      "source": [
-        "## Train untuned model"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "iaPdbEQKGA64"
-      },
-      "outputs": [],
-      "source": [
-        "# Evaluate all original, untuned models on the test set for comparison\n",
-        "print(\"Evaluating original, untuned models:\")\n",
-        "print(model_tuned.keys())\n",
-        "\n",
-        "for name, pipeline in pipelines.items():\n",
-        "    if (name in pipelines_to_tune.keys()): # Check if the model is in the pipelines_to_tune list\n",
-        "      print(f\"\\nSkipping already tuned model: {name}\")\n",
-        "      continue\n",
-        "    print(f\"\\nEvaluating untuned model: {name}\")\n",
-        "    # Fit the original pipeline on the entire training data before evaluating on test set\n",
-        "    #pipeline.set_params(**best_params_for_train_untuned_model_dict)\n",
-        "    pipeline.fit(X_train, y_train)\n",
-        "\n",
-        "    model_tuned[name][\"tuned_estimators\"] = pipeline\n",
-        "    model_tuned[name][\"tune_results\"] = evaluate_on_test(pipeline, X_test, y_test)"
       ]
     },
     {
