--- a/ML_Assignment__standard_team_lastest.ipynb
+++ b/ML_Assignment__standard_team_lastest.ipynb
@@ -462,10 +462,13 @@
         "    # allow both exact and wildcard matches; also fix \"LogReg_*\" -> \"LogReg*\"\n",
         "    grid_map = {k.replace(\"_*\", \"*\"): v for k, v in grid_map.items()}\n",
         "    if model_name in grid_map:\n",
+        "        print(f\"=> return grid {grid_map[model_name]}\")\n",
         "        return grid_map[model_name]\n",
         "    for pattern, grid in grid_map.items():\n",
         "        if fnmatchcase(model_name, pattern):\n",
+        "            print(f\"=> return grid {grid}\")\n",
         "            return grid\n",
+        "    print(f\"=> no grid found for {model_name}\")\n",
         "    return None\n",
         "\n",
         "def evaluate_on_test(est, X_test = X_test, y_test = y_test):\n",
@@ -495,8 +498,9 @@
         "            pass\n",
         "\n",
         "    # Add OOB score if available (for RandomForestClassifier when oob_score=True)\n",
-        "    if hasattr(est, 'steps') and isinstance(est.steps[-1][1], RandomForestClassifier) and hasattr(est.steps[-1][1], 'oob_score_'):\n",
-        "        metrics[\"oob_score\"] = est.steps[-1][1].oob_score_\n",
+        "    if hasattr(est, 'steps') and isinstance(est.named_steps[\"clf\"], RandomForestClassifier) and hasattr(est.named_steps[\"clf\"], 'oob_score_'):\n",
+        "        metrics[\"oob_score\"] = est.named_steps[\"clf\"].oob_score_\n",
+        "\n",
         "    elif isinstance(est, RandomForestClassifier) and hasattr(est, 'oob_score_'):\n",
         "         metrics[\"oob_score\"] = est.oob_score_\n",
         "\n",
@@ -530,15 +534,6 @@
       "outputs": [],
       "source": [
         "pipelines = {\n",
-        "    \"RF_SMOTETomek\": ImbPipeline([\n",
-        "        (\"scale\", StandardScaler()),\n",
-        "        (\"sel\", SelectKBest(score_func=f_classif)), # supervised selection\n",
-        "        (\"smtomek\", SMOTETomek(random_state=SEED)),\n",
-        "        (\"clf\", RandomForestClassifier(\n",
-        "            bootstrap=True,\n",
-        "            oob_score=True,\n",
-        "            random_state=SEED))\n",
-        "    ]),\n",
         "    \"RF_balancedRF\": ImbPipeline([\n",
         "        (\"sel\", SelectKBest(score_func=f_classif)), # supervised selection\n",
         "        (\"clf\", BalancedRandomForestClassifier(\n",
@@ -589,6 +584,15 @@
         "            oob_score=True,\n",
         "            random_state=SEED))\n",
         "    ]),\n",
+        "    \"RF_SMOTETomek\": ImbPipeline([\n",
+        "        (\"scale\", StandardScaler()),\n",
+        "        (\"sel\", SelectKBest(score_func=f_classif)), # supervised selection\n",
+        "        (\"smtomek\", SMOTETomek(random_state=SEED)),\n",
+        "        (\"clf\", RandomForestClassifier(\n",
+        "            bootstrap=True,\n",
+        "            oob_score=True,\n",
+        "            random_state=SEED))\n",
+        "    ]),\n",
         "\n",
         "}"
       ]
@@ -614,56 +618,12 @@
         "\n",
         "search_spaces = {\n",
         "    # === Baselines ===\n",
-        "    \"RF_balancedRF\": {\n",
-        "        \"clf__n_estimators\": [300, 600, 1000],\n",
-        "        \"clf__max_depth\": [None, 10, 20, 30],\n",
-        "        \"clf__min_samples_leaf\": [1, 2, 4],\n",
-        "        \"clf__max_features\": [\"sqrt\", 0.5, 0.8],\n",
-        "        \"clf__n_jobs\": [-1],\n",
-        "    },\n",
-        "    \"RF_pure\": {\n",
-        "        \"clf__n_estimators\": [300, 600, 1000],\n",
-        "        \"clf__max_depth\": [None, 10, 20, 30],\n",
-        "        \"clf__min_samples_leaf\": [1, 2, 4],\n",
-        "        \"clf__max_features\": [\"sqrt\", 0.5, 0.8],\n",
-        "        \"clf__n_jobs\": [-1],\n",
-        "    },\n",
-        "    \"RF_class_weighted\": {\n",
-        "        \"clf__n_estimators\": [300, 600, 1000],\n",
-        "        \"clf__max_depth\": [None, 10, 20, 30],\n",
-        "        \"clf__min_samples_leaf\": [1, 2, 4],\n",
-        "        \"clf__max_features\": [\"sqrt\", 0.5, 0.8],\n",
-        "        \"clf__n_jobs\": [-1],\n",
-        "    },\n",
-        "    \"RF_FS\" : {\n",
-        "        \"clf__n_estimators\": [300, 600, 1000],\n",
-        "        \"clf__max_depth\": [None, 10, 20, 30],\n",
-        "        \"clf__min_samples_leaf\": [1, 2, 4],\n",
-        "        \"clf__max_features\": [\"sqrt\", 0.5, 0.8],\n",
-        "        \"clf__n_jobs\": [-1],\n",
-        "    },\n",
-        "\n",
-        "    # === Samplers ===\n",
-        "    \"RF_SMOTE\": {\n",
-        "        \"clf__n_estimators\": [300, 600, 1000],\n",
-        "        \"clf__max_depth\": [None, 10, 20],\n",
-        "        \"clf__min_samples_leaf\": [1, 2, 4],\n",
-        "        \"clf__max_features\": [\"sqrt\", 0.5],\n",
-        "        \"clf__n_jobs\": [-1],\n",
-        "    },\n",
-        "    \"RF_BorderlineSMOTE\": {\n",
-        "\n",
-        "        \"clf__n_estimators\": [300, 600, 1000],\n",
-        "        \"clf__max_depth\": [None, 10, 20],\n",
-        "        \"clf__min_samples_leaf\": [1, 2, 4],\n",
-        "        \"clf__max_features\": [\"sqrt\", 0.5],\n",
-        "        \"clf__n_jobs\": [-1],\n",
-        "    },\n",
-        "    \"RF_SMOTETomek\": {\n",
-        "        \"clf__n_estimators\": [300, 600, 1000],\n",
-        "        \"clf__max_depth\": [None, 10, 20],\n",
-        "        \"clf__min_samples_leaf\": [1, 2, 4],\n",
-        "        \"clf__max_features\": [\"sqrt\", 0.5],\n",
+        "    \"RF_*\": {\n",
+        "        \"clf__n_estimators\": [100, 200, 300, 400, 500, 600, 700, 800, 900, 1000],\n",
+        "        \"clf__max_depth\": [None, 10, 20 ,30 ,40, 50, 70, 100, 150, 200],\n",
+        "        \"clf__min_samples_split\": [2, 4 ,5 ,8, 10, 20, 50, 100],\n",
+        "        \"clf__min_samples_leaf\": [1, 2, 4 ,5 ,8, 10, 20, 50],\n",
+        "        \"clf__max_features\": [\"sqrt\", \"log2\", 0.3, 0.5, 0.7, 0.9, 1.0],\n",
         "        \"clf__n_jobs\": [-1],\n",
         "    }\n",
         "}"
@@ -711,9 +671,6 @@
       },
       "outputs": [],
       "source": [
-        "n_splits = getattr(cv, \"n_splits\", None) or cv.get_n_splits(X_train, y_train)\n",
-        "print(f\"[CV] n_splits={n_splits}\")\n",
-        "\n",
         "model_tuned: dict[str, dict] = defaultdict(dict)\n",
         "\n",
         "for model_name, base_est in pipelines.items():\n",
@@ -736,7 +693,6 @@
         "        n_jobs=-1,\n",
         "        error_score=np.nan,   # don't bomb entire run on a single bad fold\n",
         "        refit=\"f1_macro\",\n",
-        "        verbose=1,\n",
         "    )\n",
         "\n",
         "    # Perform the hyperparameter search by fitting the search object\n",
@@ -747,11 +703,24 @@
         "    model_tuned[model_name][\"tune_results\"] = {\n",
         "        \"best_score\": float(search.best_score_),\n",
         "        \"best_params\": search.best_params_,\n",
-        "        \"n_candidates\": getattr(search, \"n_candidates_\", None),\n",
-        "        \"n_iterations\": getattr(search, \"n_iterations_\", None),\n",
         "    }\n",
-        "    model_tuned[model_name][\"tuned_estimators\"] = search.best_estimator_"
+        "    model_tuned[model_name][\"tuned_estimators\"] = search.best_estimator_\n",
+        "\n",
+        ""
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Feature Selcted\n",
+        "for model_name, model_info in model_tuned.items():\n",
+        "    print(model_info)"
+      ],
+      "metadata": {
+        "id": "GidMJxPSOFHV"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -869,17 +838,13 @@
         "for name, vals in model_tuned.items():\n",
         "    row = {\"model\": name}\n",
         "    print(f\"model: \", name)\n",
+        "\n",
         "    # Check if 'tune_results' contains tuning results or test metrics\n",
         "    if \"best_score\" in vals[\"tune_results\"]:\n",
         "        # This is a tuned model, get test metrics from evaluate_on_test\n",
         "        test_metrics = evaluate_on_test(vals[\"tuned_estimators\"], X_test, y_test)\n",
         "        row.update(test_metrics)\n",
         "        row[\"model\"] = f\"{name} (Tuned)\" # Add (Tuned) to the name\n",
-        "    else:\n",
-        "        # This is an original model, test metrics are already in tune_results\n",
-        "        print(\"|-> This is an original model, test metrics are already in tune_results\")\n",
-        "        row.update(vals[\"tune_results\"])\n",
-        "        row[\"model\"] = f\"{name} (Original)\" # Add (Original) to the name\n",
         "\n",
         "    comparison_data.append(row)"
       ]
