--- a/ML_Assignment__standard_team_lastest.ipynb
+++ b/ML_Assignment__standard_team_lastest.ipynb
@@ -740,7 +740,7 @@
         "         feat_imp_df[\"importance\"][::-1],\n",
         "         color=\"skyblue\")\n",
         "plt.xlabel(\"Relative Importance\")\n",
-        "plt.title(\"Top 10 Feature Importances — Random Forest\")\n",
+        "plt.title(\"Feature Importances — Random Forest\")\n",
         "plt.tight_layout()\n",
         "plt.show()"
       ],
